Uploads basic utilities js file, deletes clutter

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
 <html>
-<head><title>What are you doing here</title>
-<body>There's nothing here.</body>
+<head>
+    <title>Fam's turbocharged mega HTML super website</title>
+    </head>
+<body>
+    <div>
+        Nothing here, my good mango
+    </div>
+</body>
 </html>
