--- a/reel/index.html
+++ b/reel/index.html
@@ -1,8 +1,24 @@
 <html>
 <head>
     <title>Reel 2021</title>
+	<style type="text/css" media="screen">
+
+*, body {
+	padding: 0 !important;
+	margin: 0 !important;
+}
+
+#video {
+	border: 0;
+	width: 100%;
+	height: 100%;
+}
+</style>
 </head>
 <body>
-Come back later duh
+
+<iframe id="video" src="https://www.youtube.com/embed/jIptu93o6n4" allowfullscreen /> 
+
+</script>
 </body>
 </html>
