Add map support to SN Triangulator

--- a/sn/batch.html
+++ b/sn/batch.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="UTF-8" >
     <title>Subnautica Coordinate Batch Triangulator</title>
     <link rel="stylesheet" href="snc.css">
     <script src="snc.js"></script>
