--- a/sn/coords.html
+++ b/sn/coords.html
@@ -14,6 +14,7 @@
         0: <input id="zero" type="number"><br>
         W: <input id="west" type="number"><br>
         N: <input id="north" type="number"><br>
+        Depth: <input id="depth" placeholder="0" type="number"><br>
         <input type="button" value="Calculate" onclick="do_once();">
     </form>
     <div id="finalCoords">
