Improve UI and UX

--- a/sn/batch.html
+++ b/sn/batch.html
@@ -9,9 +9,9 @@
 <body>
     <a href="coords.html">Go Back</a>
     <form id="coordsForm">
-        <textarea rows="40" cols="40" id="batchList" name="text" placeholder="Comma separated values (0,W,N,depth), one quartet per line."></textarea><br>
-        <input type="button" value="Calculate" onclick="do_batch();">
+        <textarea class="coordsInput" rows="40" cols="40" id="batchList" name="text" placeholder="Comma separated values (0,W,N,depth), one quartet per line."></textarea><br>
     </form>
+    <input class="coordsButton" type="button" value="Batch Triangulate" onclick="do_batch();">
     <div id="finalCoords">
         
     </div>
