Implement layers and layer visibility toggling

--- a/sn/coords.html
+++ b/sn/coords.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" >
     <title>Subnautica Coordinate Triangulator</title>
     <link rel="stylesheet" href="snc.css">
+    <link rel="stylesheet" href="snc-check.css">
     <!--script src="https://famellad.github.io/js/utils.js"></script-->
     <script src="../js/utils.js"></script>
     <script src="snc.js"></script>
@@ -23,6 +24,8 @@
     <p id="directions">
         Waiting for coords...
     </p>
+    <form id="layersForm">
+    </form>
     <div id="mapDiv">
         <canvas id="map" width="1000" height="1000" ></canvas>
     </div>
