Add new markers, update biomes

--- a/sn/batch.html
+++ b/sn/batch.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <a href="coords.html">Go Back</a>
-    <form id="coordsForm">
-        <textarea class="coordsInput" rows="40" cols="40" id="batchList" name="text" placeholder="Comma separated values (0,W,N,depth), one quartet per line."></textarea><br>
+    <form id="">
+        <textarea class="coordsInput" rows="40" cols="60" id="batchList" name="text" placeholder="Comma separated values (0,W,N,depth), one quartet per line."></textarea><br>
     </form>
     <input class="coordsButton" type="button" value="Batch Triangulate" onclick="do_batch();">
     <div id="finalCoords">
