--- a/mockup-rokyy/index.html
+++ b/mockup-rokyy/index.html
@@ -7,7 +7,12 @@
         <!-- BARRA SUPERIOR  -->
         <div class="panel" id="header">
             <div class="container">
-                <img id="top-logo" src="assets/rokyy-512.png">
+                <a href="https://www.rokyy.com/">
+                    <img id="top-logo" src="assets/rokyy-512.png">
+                </a>
+                <div class="inline right-box" id="about">
+                    <a href="#">Acerca de Rokyy</a>
+                </div>
             </div>
         </div>
               
@@ -15,9 +20,24 @@
         <div class="panel" id="rokyy-form">
             <div class="slant" id="slant-header"></div>  
             <div class="container">
-                <form id="container-form">
-                    <input type="text">
-                </form>
+                <div id="container-form">
+                    <form id="form-grid">
+                        <span class="form-left">Nombre completo</span> 
+                        <input type="text">
+
+                        <span class="form-left">Email</span> 
+                        <input type="text">
+
+                        <span class="form-left">Celular (opcional)</span> 
+                        <input type="text">
+
+                        <span class="form-left">País de origen</span> 
+                        <input type="text">
+
+                        <span class="form-left">País de destino</span> 
+                        <input type="text">
+                    </form>
+                </div>
             </div>
         </div>
 
@@ -25,7 +45,8 @@
         <div class="panel" id="rokyy-info">
             <div class="slant" id="slant-form"></div>
             <div class="container">
-
+                <p class="fluff">
+                    Cuando la distancia te separa de tus seres queridos, cuando estás lejos de quienes amas, Rokyy es la plataforma que te ayudará a enviar el apoyo que necesitan hasta que vuelvan a estar juntos, nuevamente.                </p>
             </div>
         </div>
 
@@ -34,13 +55,13 @@
             <div class="slant" id="slant-footer"></div>
             <div id="sup-footer-container">
                 <div class="container">
-                    <div class="inline" id="left-box">
+                    <div class="inline left-box">
                         <div class="inline" id="copyright">&#169; 2021 - ROKYY</div>
                         <div class="inline" id="legal">
                             <a href="#">Términos y Condiciones</a>
                         </div>
                     </div>
-                    <div class="inline" id="right-box">
+                    <div class="inline right-box">
                         <div class="inline" id="design">
                             Diseñado por <a href="mailto:felipe@shard.cl">Shard Media</a>
                             <img src="../assets/shard-small-white.png" style="height: 1rem;">
