Update Rokyy mockup rev.2

--- a/mockup-rokyy/index.html
+++ b/mockup-rokyy/index.html
@@ -8,7 +8,7 @@
         <div class="panel" id="header">
             <div class="container">
                 <a href="https://www.rokyy.com/">
-                    <img id="top-logo" src="assets/rokyy-512.png">
+                    <img id="top-logo" style="margin-left: 1.5rem;" src="assets/rokyy-512.png">
                 </a>
                 <div class="inline right-box" id="about">
                     <a href="#">Acerca de Rokyy</a>
@@ -31,10 +31,10 @@
                         <span class="form-left">Celular (opcional)</span> 
                         <input type="text">
 
-                        <span class="form-left">País de origen</span> 
+                        <span class="form-left">Pa&iacute;s de origen</span> 
                         <input type="text">
 
-                        <span class="form-left">País de destino</span> 
+                        <span class="form-left">Pa&iacute;s de destino</span> 
                         <input type="text">
                     </form>
                 </div>
@@ -46,7 +46,7 @@
             <div class="slant" id="slant-form"></div>
             <div class="container">
                 <p class="fluff">
-                    Cuando la distancia te separa de tus seres queridos, cuando estás lejos de quienes amas, Rokyy es la plataforma que te ayudará a enviar el apoyo que necesitan hasta que vuelvan a estar juntos, nuevamente.                </p>
+                    Cuando la distancia te separa de tus seres queridos, cuando est&aacute;s lejos de quienes amas, Rokyy es la plataforma que te ayudar&aacute; a enviar el apoyo que necesitan hasta que vuelvan a estar juntos, nuevamente.                </p>
             </div>
         </div>
 
@@ -56,15 +56,16 @@
             <div id="sup-footer-container">
                 <div class="container">
                     <div class="inline left-box">
-                        <div class="inline" id="copyright">&#169; 2021 - ROKYY</div>
+                        <div class="inline" id="copyright">&#169; 2021 - Rokyy</div>
+                        <div class="inline" style="margin-left: 1rem;"> // </div>
                         <div class="inline" id="legal">
-                            <a href="#">Términos y Condiciones</a>
+                            <a href="#">T&eacute;rminos y Condiciones</a>
                         </div>
                     </div>
                     <div class="inline right-box">
                         <div class="inline" id="design">
-                            Diseñado por <a href="mailto:felipe@shard.cl">Shard Media</a>
-                            <img src="../assets/shard-small-white.png" style="height: 1rem;">
+                            Dise&ntilde;ado por <a href="mailto:felipe@shard.cl">Shard Media</a>
+                            <img src="https://famellad.github.io/assets/shard-small-white.png" style="height: 1rem;">
                         </div>
                     </div>
                 </div>
