Achieve Feature Parity

--- a/gc/index.html
+++ b/gc/index.html
@@ -68,7 +68,7 @@ Coloris({
     <!-- TERCERA FILA-->
     <div class="confItem">
       <label for="lname">Acento:</label>
-      <input type="checkbox" id="bAcento"><br>
+      <input type="checkbox" id="bAcento" checked="True"><br>
     </div>
 
     <div class="confItem">
