--- a/gc/index.html
+++ b/gc/index.html
@@ -26,9 +26,10 @@ Coloris({
   ],
 });
 </script>
-    </head>
-    <body>
-        <div id="canvasDiv"> </div>
+</head>
+
+<body>
+        <div id="canvasDiv" width="960px" height="540px" style="width: 960px !important; height: 540px !important;"> </div> <br>
         <div id="configDiv">
 <form action="">
   <div class="configGrid">
