--- a/gc/index.html
+++ b/gc/index.html
@@ -35,24 +35,25 @@ Coloris({
   <div class="configGrid">
     <!-- PRIMERA FILA-->
     <div class="confItem">
-      <label for="fname">Pre-Brightness</label><br>
+      <label for="fname">Nombre:</label><br>
       <input type="text" id="nombre" name="nombre" value="DR. IGNACIO SÁNCHEZ"><br><br>
     </div>
 
     <div class="confItem">
-      <label for="lname">Pre-Contrast</label><br>
+      <label for="lname">Fondo Nombre:</label><br>
       <input type="text" id="cPrinc" value="rgb(47, 125, 225)" data-coloris><br>
     </div>
 
     <div class="confItem">
-      <label for="lname">Sigma (Size):</label><br>
+      <label for="lname">Color Nombre:</label><br>
       <input type="text" id="cPrincText" value="rgb(255, 255, 255)" data-coloris><br>
     </div>
 
     <!-- SEGUNDA FILA-->
     <div class="confItem">
-      <label for="lname">Sigma Multiplier:</label><br>
+      <label for="lname">Bajada:</label><br>
       <input type="text" id="bajada1" name="bajada1" value="Rector Pontificia Universidad Católica"><br>
+      <input type="text" id="bajada2" name="bajada2" value=""><br><br>
     </div>
     
     <div class="confItem">
