--- a/gc/index.html
+++ b/gc/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>GC</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"/>
-        <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
         <link rel="stylesheet" href="gcstyle.css">
-        <script src="https://github.com/processing/p5.js/releases/download/v1.9.0/p5.js"></script>
-        <script src="script.js"></script> 
+        <script type="text/javascript" src="https://github.com/processing/p5.js/releases/download/v1.9.0/p5.js"></script>
+        <!--script type="text/javascript" src="https://famellad.github.io/js/utils.js"></script-->
+        <script type="text/javascript" src="script.js" defer="defer"></script>
+        <script type="text/javascript" src="drawCG.js" defer="defer"></script> 
         <script>
 Coloris({
   themeMode: 'light',
   alpha: false,
   format:  'rgb',
+  formatToggle: true,
   swatches: [
     '#2f7de1',
     '#d4dcf8',
@@ -26,9 +29,10 @@ Coloris({
   ],
 });
 </script>
-</head>
-
+<meta charset="utf-8">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
 <body>
+<div id="container">
         <div id="canvasDiv" width="960px" height="540px" style="width: 960px !important; height: 540px !important;"> </div> <br>
         <div id="configDiv">
 <form action="">
@@ -81,6 +85,11 @@ Coloris({
     </div>
   </div>
 </form> 
+
+<br>
+<button id="dlButton" type="button" onClick="downloadCanvasAsImage()"><i class="bi bi-download"></i></button>
+
         </div>
+      </div>
     </body>
 </html>
