GC - Revert default accent to yellow

--- a/gc/index.html
+++ b/gc/index.html
@@ -78,7 +78,7 @@ Coloris({
 
     <div class="confItem">
       <label for="lname">Color Acento:</label><br>
-      <input type="text" id="cAcent" value="#dcea90" data-coloris><br>
+      <input type="text" id="cAcent" value="#fcd700" data-coloris><br>
     </div>
 
     <div class="confItem">
